# fat32emu

./: CMakeLists.txt  README.md
include/: commands.h  disk.h  fat32.h  utils.h
src/: commands.c  disk.c  fat32.c  main.c  utils.c
test/: CMakeLists.txt  test_disk.c  test_fat32.c  test_utils.c
